<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Good &amp; Fast Food Republic Polytechnic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_fav">FavActivity</string>
    <string name="myFav">My Favourite</string>
    <string name="topFav">Top Favourites</string>
    <string name="back">Back</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="title_activity_login_or_logout">LoginOrLogoutActivity</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="cfmPassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="like">Likes</string>
    <string name="addreviews">Add Reviews</string>
    <string name="name">Name</string>
    <string name="review">Review</string>
    <string name="ratings">Ratings</string>
    <string name="onestar">1</string>
    <string name="twostar">2</string>
    <string name="threestar">3</string>
    <string name="fourstar">4</string>
    <string name="fivestar">5</string>
    <string name="add">Add</string>
    <string name="john">John</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_store_description">StoreDescription</string>
    <string name="title_activity_rating_and_reviews">RatingAndReviews</string>
    <string name="title_activity_update_review">UpdateReview</string>

</resources>
