<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".UpdateReview" >

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/textViewReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textViewRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratings"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/radioGroupStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioUpdate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/onestar" />

            <RadioButton
                android:id="@+id/radioUpdate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twostar" />

            <RadioButton
                android:id="@+id/radioUpdate3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/threestar" />

            <RadioButton
                android:id="@+id/radioUpdate4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourstar" />

            <RadioButton
                android:id="@+id/radioUpdate5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fivestar" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
